# OptiMatch

./: README.md
OptiMatch-ios/OptiMatch/: ContentView.swift  OptiMatchApp.swift
OptiMatch-ios/OptiMatchUITests/: OptiMatchUITestsLaunchTests.swift
OptiMatch/OptiMatch/: CardView.swift  SwipeView.swift
OptiMatch/OptiMatch.xcodeproj/: project.pbxproj
OptiMatch/OptiMatch.xcodeproj/project.xcworkspace/xcuserdata/viraatdas.xcuserdatad/: UserInterfaceState.xcuserstate
OptiMatch/OptiMatch.xcodeproj/xcuserdata/viraatdas.xcuserdatad/xcschemes/: xcschememanagement.plist
OptiMatch/OptiMatchTests/: OptiMatchTests.swift
OptiMatch/OptiMatchUITests/: OptiMatchUITests.swift
backend/: .gitignore  example.py  pyproject.toml
backend/src/: main.py
backend/src/config/: __init__.py  dev.ini
backend/src/db/: db.py
backend/src/tests/: test_suppliers.py
