[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Viraat", email = "viraat.laldas@gmail.com"},
]
dependencies = [
    "fastapi>=0.72.0",
    "uvicorn[standard]>=0.17.0",
    "neo4j>=4.4.1",
    "strawberry-graphql>=0.94.0",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
